# test-riscv-semihosting-exit

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
